# intringen

./: .gitignore  Cargo.toml
crates/generate/: Cargo.toml
crates/generate/src/: generate.rs  main.rs  parse.rs
crates/intringen/: Cargo.toml
crates/intringen/src/: lib.rs
crates/intringen/src/x86/: generated.rs  mod.rs  tests.rs
